src/transpiler/ExtendSolidityParser.cpp

// Generated from ExtendSolidity.g4 by ANTLR 4.12.0


#include "ExtendSolidityListener.h"
#include "ExtendSolidityVisitor.h"

#include "ExtendSolidityParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ExtendSolidityParserStaticData final {
  ExtendSolidityParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ExtendSolidityParserStaticData(const ExtendSolidityParserStaticData&) = delete;
  ExtendSolidityParserStaticData(ExtendSolidityParserStaticData&&) = delete;
  ExtendSolidityParserStaticData& operator=(const ExtendSolidityParserStaticData&) = delete;
  ExtendSolidityParserStaticData& operator=(ExtendSolidityParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag extendsolidityParserOnceFlag;
ExtendSolidityParserStaticData *extendsolidityParserStaticData = nullptr;

void extendsolidityParserInitialize() {
  assert(extendsolidityParserStaticData == nullptr);
  auto staticData = std::make_unique<ExtendSolidityParserStaticData>(
    std::vector<std::string>{
      "sourceUnit", "pragmaDirective", "pragmaName", "pragmaValue", "version", 
      "versionOperator", "versionConstraint", "importDeclaration", "importDirective", 
      "natSpec", "contractDefinition", "inheritanceSpecifier", "contractPart", 
      "stateVariableDeclaration", "usingForDeclaration", "structDefinition", 
      "constructorDefinition", "modifierDefinition", "modifierInvocation", 
      "functionDefinition", "functionDescriptor", "returnParameters", "modifierList", 
      "overrideSpecifier", "accessiblity", "eventDefinition", "enumValue", 
      "enumDefinition", "parameterList", "parameter", "eventParameterList", 
      "eventParameter", "functionTypeParameterList", "functionTypeParameter", 
      "variableDeclaration", "typeName", "userDefinedTypeName", "mapping", 
      "functionTypeName", "storageLocation", "stateMutability", "block", 
      "statement", "expressionStatement", "ifStatement", "ifWithBlock", 
      "elseWithBlock", "elseIfWithBlock", "whileStatement", "forStatement", 
      "inlineAssemblyStatement", "doWhileStatement", "continueStatement", 
      "breakStatement", "returnStatement", "throwStatement", "emitStatement", 
      "relayStatement", "relayLambdaDefinition", "relayLambdaParameter", 
      "relayScope", "variableDeclarationStatement", "localVariableDeclaration", 
      "variableDeclarationList", "moreVariableDeclaration", "identifierList", 
      "moreIdentifier", "elementaryTypeName", "expression", "postOperator", 
      "preOperator", "midOperator", "primaryExpression", "matchedParentheses", 
      "expressionList", "nameValueList", "nameValue", "functionCallArguments", 
      "functionCall", "assemblyBlock", "assemblyItem", "assemblyExpression", 
      "assemblyCall", "assemblyLocalDefinition", "assemblyAssignment", "assemblyIdentifierOrList", 
      "assemblyIdentifierList", "assemblyStackAssignment", "labelDefinition", 
      "assemblySwitch", "assemblyCase", "assemblyFunctionDefinition", "assemblyFunctionReturns", 
      "assemblyFor", "assemblyIf", "assemblyLiteral", "subAssembly", "tupleExpression", 
      "bracketTupleExpression", "moreExpression", "paranthesesTupleExpression", 
      "typeNameExpression", "numberLiteral", "identifier", "scope", "accessSpecifier"
    },
    std::vector<std::string>{
      "", "'pragma'", "';'", "'^'", "'~'", "'>='", "'>'", "'<'", "'<='", 
      "'='", "'as'", "'import'", "'*'", "'from'", "'{'", "','", "'}'", "'contract'", 
      "'interface'", "'library'", "'is'", "'('", "')'", "'using'", "'for'", 
      "'struct'", "'modifier'", "'function'", "'returns'", "'event'", "'enum'", 
      "'['", "']'", "'address'", "'.'", "'mapping'", "'=>'", "'memory'", 
      "'storage'", "'calldata'", "'if'", "'else'", "'while'", "'assembly'", 
      "'do'", "'return'", "'throw'", "'emit'", "'var'", "'@'", "'global'", 
      "'locals'", "'bool'", "'string'", "'byte'", "'new'", "'\\u003F'", 
      "':'", "'++'", "'--'", "'+'", "'-'", "'!'", "'after'", "'delete'", 
      "'**'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'=='", "'!='", 
      "'&&'", "'||'", "'|='", "'^='", "'&='", "'<<='", "'>>='", "'+='", 
      "'-='", "'*='", "'/='", "'%='", "'let'", "':='", "'=:'", "'switch'", 
      "'case'", "'default'", "'->'", "'local'", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'anonymous'", "'break'", "'constant'", 
      "'continue'", "'external'", "'indexed'", "'internal'", "'payable'", 
      "'private'", "'public'", "'pure'", "'type'", "'view'", "'relay'", 
      "'constructor'", "'override'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "NatSpecSingleLine", "NatSpecMultiLine", 
      "VersionLiteral", "BooleanLiteral", "DecimalNumber", "HexNumber", 
      "Int", "Uint", "Byte", "Fixed", "Ufixed", "NumberUnit", "HexLiteral", 
      "ReservedKeyword", "AnonymousKeyword", "BreakKeyword", "ConstantKeyword", 
      "ContinueKeyword", "ExternalKeyword", "IndexedKeyword", "InternalKeyword", 
      "PayableKeyword", "PrivateKeyword", "PublicKeyword", "PureKeyword", 
      "TypeKeyword", "ViewKeyword", "RelayKeyword", "ConstructorKeyword", 
      "OverrideKeyword", "Identifier", "StringLiteral", "WS", "COMMENT", 
      "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  extendsolidityParserStaticData = staticData.release();
}

}

ExtendSolidityParser::ExtendSolidityParser(TokenStream *input) : ExtendSolidityParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ExtendSolidityParser::ExtendSolidityParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ExtendSolidityParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *extendsolidityParserStaticData->atn, extendsolidityParserStaticData->decisionToDFA, extendsolidityParserStaticData->sharedContextCache, options);
}

ExtendSolidityParser::~ExtendSolidityParser() {
  delete _interpreter;
}

const atn::ATN& ExtendSolidityParser::getATN() const {
  return *extendsolidityParserStaticData->atn;
}

std::string ExtendSolidityParser::getGrammarFileName() const {
  return "ExtendSolidity.g4";
}

const std::vector<std::string>& ExtendSolidityParser::getRuleNames() const {
  return extendsolidityParserStaticData->ruleNames;
}

const dfa::Vocabulary& ExtendSolidityParser::getVocabulary() const {
  return extendsolidityParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ExtendSolidityParser::getSerializedATN() const {
  return extendsolidityParserStaticData->serializedATN;
}


//----------------- SourceUnitContext ------------------------------------------------------------------

ExtendSolidityParser::SourceUnitContext::SourceUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExtendSolidityParser::SourceUnitContext::EOF() {
  return getToken(ExtendSolidityParser::EOF, 0);
}

std::vector<ExtendSolidityParser::PragmaDirectiveContext *> ExtendSolidityParser::SourceUnitContext::pragmaDirective() {
  return getRuleContexts<ExtendSolidityParser::PragmaDirectiveContext>();
}

ExtendSolidityParser::PragmaDirectiveContext* ExtendSolidityParser::SourceUnitContext::pragmaDirective(size_t i) {
  return getRuleContext<ExtendSolidityParser::PragmaDirectiveContext>(i);
}

std::vector<ExtendSolidityParser::ImportDirectiveContext *> ExtendSolidityParser::SourceUnitContext::importDirective() {
  return getRuleContexts<ExtendSolidityParser::ImportDirectiveContext>();
}

ExtendSolidityParser::ImportDirectiveContext* ExtendSolidityParser::SourceUnitContext::importDirective(size_t i) {
  return getRuleContext<ExtendSolidityParser::ImportDirectiveContext>(i);
}

std::vector<ExtendSolidityParser::ContractDefinitionContext *> ExtendSolidityParser::SourceUnitContext::contractDefinition() {
  return getRuleContexts<ExtendSolidityParser::ContractDefinitionContext>();
}

ExtendSolidityParser::ContractDefinitionContext* ExtendSolidityParser::SourceUnitContext::contractDefinition(size_t i) {
  return getRuleContext<ExtendSolidityParser::ContractDefinitionContext>(i);
}


size_t ExtendSolidityParser::SourceUnitContext::getRuleIndex() const {
  return ExtendSolidityParser::RuleSourceUnit;
}

void ExtendSolidityParser::SourceUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceUnit(this);
}

void ExtendSolidityParser::SourceUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceUnit(this);
}


std::any ExtendSolidityParser::SourceUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExtendSolidityVisitor*>(visitor))
    return parserVisitor->visitSourceUnit(this);
  else
    return visitor->visitChildren(this);
}

ExtendSolidityParser::SourceUnitContext* ExtendSolidityParser::sourceUnit() {
  SourceUnitContext *_localctx = _tracker.createInstance<SourceUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, ExtendSolidityParser::RuleSourceUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(217);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 919554) != 0) || _la == ExtendSolidityParser::NatSpecSingleLine

    || _la == ExtendSolidityParser::NatSpecMultiLine) {
      setState(215);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ExtendSolidityParser::T__0: {
          setState(212);
          pragmaDirective();
          break;
        }

        case ExtendSolidityParser::T__10: {
          setState(213);
          importDirective();
          break;
        }

        case ExtendSolidityParser::T__16:
        case ExtendSolidityParser::T__17:
        case ExtendSolidityParser::T__18:
        case ExtendSolidityParser::NatSpecSingleLine:
        case ExtendSolidityParser::NatSpecMultiLine: {
          setState(214);
          contractDefinition();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(219);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(220);
    match(ExtendSolidityParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaDirectiveContext ------------------------------------------------------------------

ExtendSolidityParser::PragmaDirectiveContext::PragmaDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExtendSolidityParser::PragmaNameContext* ExtendSolidityParser::PragmaDirectiveContext::pragmaName() {
  return getRuleContext<ExtendSolidityParser::PragmaNameContext>(0);
}

ExtendSolidityParser::PragmaValueContext* ExtendSolidityParser::PragmaDirectiveContext::pragmaValue() {
  return getRuleContext<ExtendSolidityParser::PragmaValueContext>(0);
}


size_t ExtendSolidityParser::PragmaDirectiveContext::getRuleIndex() const {
  return ExtendSolidityParser::RulePragmaDirective;
}

void ExtendSolidityParser::PragmaDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaDirective(this);
}

void ExtendSolidityParser::PragmaDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaDirective(this);
}


std::any ExtendSolidityParser::PragmaDirectiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExtendSolidityVisitor*>(visitor))
    return parserVisitor->visitPragmaDirective(this);
  else
    return visitor->visitChildren(this);
}

ExtendSolidityParser::PragmaDirectiveContext* ExtendSolidityParser::pragmaDirective() {
  PragmaDirectiveContext *_localctx = _tracker.createInstance<PragmaDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 2, ExtendSolidityParser::RulePragmaDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(222);
    match(ExtendSolidityParser::T__0);
    setState(223);
    pragmaName();
    setState(224);
    pragmaValue();
    setState(225);
    match(ExtendSolidityParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaNameContext ------------------------------------------------------------------

ExtendSolidityParser::PragmaNameContext::PragmaNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExtendSolidityParser::IdentifierContext* ExtendSolidityParser::PragmaNameContext::identifier() {
  return getRuleContext<ExtendSolidityParser::IdentifierContext>(0);
}


size_t ExtendSolidityParser::PragmaNameContext::getRuleIndex() const {
  return ExtendSolidityParser::RulePragmaName;
}

void ExtendSolidityParser::PragmaNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaName(this);
}

void ExtendSolidityParser::PragmaNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaName(this);
}


std::any ExtendSolidityParser::PragmaNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExtendSolidityVisitor*>(visitor))
    return parserVisitor->visitPragmaName(this);
  else
    return visitor->visitChildren(this);
}

ExtendSolidityParser::PragmaNameContext* ExtendSolidityParser::pragmaName() {
  PragmaNameContext *_localctx = _tracker.createInstance<PragmaNameContext>(_ctx, getState());
  enterRule(_localctx, 4, ExtendSolidityParser::RulePragmaName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(227);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaValueContext ------------------------------------------------------------------

ExtendSolidityParser::PragmaValueContext::PragmaValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExtendSolidityParser::VersionContext* ExtendSolidityParser::PragmaValueContext::version() {
  return getRuleContext<ExtendSolidityParser::VersionContext>(0);
}

ExtendSolidityParser::ExpressionContext* ExtendSolidityParser::PragmaValueContext::expression() {
  return getRuleContext<ExtendSolidityParser::ExpressionContext>(0);
}


size_t ExtendSolidityParser::PragmaValueContext::getRuleIndex() const {
  return ExtendSolidityParser::RulePragmaValue;
}

void ExtendSolidityParser::PragmaValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaValue(this);
}

void ExtendSolidityParser::PragmaValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExtendSolidityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaValue(this);
}


std::any ExtendSolidityParser::PragmaValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExtendSolidityVisitor*>(visitor))
    return parserVisitor->visitPragmaValue(this);
  else
    return visitor->visitChildren(this);
}

ExtendSolidityParser::PragmaValueContext* ExtendSolidityParser::pragmaValue() {
  PragmaValueContext *_localctx = _tracker.createInstance<PragmaValueContext>(_ctx, getState());
  enterRule(_localctx, 6, ExtendSolidityParser::RulePragmaValue);
